# Miam-Player

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  README.txt  appveyor.yml  mainwindow.cpp  miam-player.pro
code/: Doxyfile  MiamProject.pro
code/MiamCore/: MiamCore.pro  abstractsearchdialog.h  cover.cpp  cover.h  filehelper.cpp  filehelper.h  flowlayout.cpp  flowlayout.h  libraryfilterlineedit.cpp  libraryfilterlineedit.h  libraryheader.cpp  libraryheader.h  mediabutton.cpp  mediabutton.h  mediaplayer.cpp  mediaplayer.h  mediaplaylist.cpp  mediaplaylist.h  miamcore_global.h  miamsortfilterproxymodel.cpp  miamsortfilterproxymodel.h  musicsearchengine.cpp  musicsearchengine.h  plugininfo.cpp  plugininfo.h  quickstartsearchengine.cpp  quickstartsearchengine.h  remotemediaplayer.cpp  remotemediaplayer.h  settings.cpp  settings.h  settingsprivate.cpp  settingsprivate.h  sqldatabase.cpp  sqldatabase.h  starrating.cpp  stopbutton.cpp  stopbutton.h  timelabel.cpp  timelabel.h  (+2 more)
code/MiamLibrary/: MiamLibrary.pro  albumitem.h  artistitem.h  changehierarchybutton.h  discitem.h  extendedtabbar.h  extendedtabwidget.h  letteritem.cpp  libraryfilterlineedit.cpp  libraryfilterlineedit.h  libraryfilterproxymodel.cpp  libraryfilterproxymodel.h  libraryheader.h  libraryitemdelegate.cpp  libraryitemdelegate.h  libraryitemmodel.cpp  libraryitemmodel.h  libraryorderdialog.cpp  libraryorderdialog.h  libraryorderdialog.ui  libraryscrollbar.h  librarytreeview.cpp  librarytreeview.h  miamitemdelegate.cpp  miamitemdelegate.h  miamitemmodel.cpp  miamitemmodel.h  scrollbar.h  separatoritem.cpp  separatoritem.h  trackitem.h  yearitem.h
code/MiamPlayer/: MiamPlayer.exe.manifest  MiamPlayer.pro  basicplugininterface.h  circleprogressbar.h  closeplaylistpopup.ui  columnutils.h  customizeoptionsdialog.ui  customizetheme.ui  dragdroppopup.ui  equalizerdialog.ui  headerview.cpp  headerview.h  libraryfilterlineedit.cpp  libraryfilterlineedit.h  localserver.cpp  localserver.h  main.cpp  mainwindow.cpp  mainwindow.h  (+38 more)
debian/: changelog  control  copyright  postrm  rules  ubuntu.sh  ubuntu.sh~
fedora/: miam-player.appdata.xml
lib/: README.md  README.txt  chromaprint.lib  libtag.dylib
osx/: Info.plist  MiamPlayer.icns  VolumeIcon.icns  create_osx_bundle.sh  spec.json
src/: MiamProject.pro
svg/: README.md  readme.txt
windows/: create_package_x64.bat  generate_computer_readable_translation.bat  generate_human_readable_translation.bat  readme.md
(+3628 files in other folders)
